# story-lifecycle

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  tmp_drive_1065570.py  tmp_drive_minimal.py  tmp_reset_clean.py  tmp_setup_1065570.py
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
.qoder/plans/: StoryOS_v1.0_Full_Push_380410bc.md
.zcode/: grok-analysis-part2-memory-telemetry.md  grok-analysis-part3-hooks-sandbox-config.md  grok-analysis-part4-agent-tools-plugins-mcp.md
docs/: 2026-06-10-claude-code-usage-exhaustion.md  ADOPTION.md  INTEGRATION.md  MIGRATION.md  ROADMAP.md  TESTING.md  agent-decision-layers-rollout.md  autonomous-pipeline-fix-roadmap.md  claude-code-agent-internals.md  design-board-diagnostics-panel.md  design-board-first-planning-session.md  design-dual-track-kanban.md  design-foreground-zellij-execution.md  design-hitl-runbook.md  design-llm-semantic-extraction.md  design-orchestration-llm-mandatory.md  design-orchestration-refactor.md  design-project-intelligence-bootstrap.md  design-review-gate-observability-and-control.md  design-smoke-001-calculator-subtract-fix.md  design-story-source-integration.md  design-story-state-governance.md  design-sub-story.md  design-tui-entry-state-machine.md  design-web-board.md  e2e-real-story.md  evaluator-loop-tui-context.md  grok-build-reference.md  handoff-design-hitl.md  idea-board-copilot-diagnostics-panel.md  idea-orchestrator-agent.md  idea-orchestrator-llm-capability-upgrade.md  idea-plan-review-adversarial-loop.md  idea-project-intelligence-pipeline.md  idea-storyos-project-intelligence-control-plane.md  manual-test-ai-dev-workflow.md  problem-workspace-git-constraint.md  real-story-e2e-runbook.md  roadmap-v0.5-to-v1.0.md  story-lifecycle-ai-engineering-gap-roadmap.md  (+4 more)
docs/code-review/: README.md  ai-1-correctness-security.md  ai-2-architecture-layering-report.json  ai-2-architecture-layering-report.md  ai-2-architecture-layering.md  ai-3-readability-style-report.json  ai-3-readability-style.md  ai-4-testing-performance.md  ai1.json  ai4.json  audit-report.json  five-layer-real-run-2026-07-05.md  fix-progress.md
docs/incidents/: 2026-06-10-claude-code-usage-exhaustion.md
docs/migration/: migration-m2-test-fix-verify.md  migration-m3-verify.md  migration-m4-verify.md  migration-m6-verify.md
docs/module-architecture/: 01-business-flow.md  02-modules-overview.md  03-module-details.md  04-knowledge-flywheel.md  05-business-to-code-mapping.md  README.md
docs/project-intelligence/: 01-three-phase-roadmap.md  02-data-flywheel-design.md  03-bootstrap-design.md  (+2 more)
frontend/: package-lock.json  package.json
miner/: config.py  story_context_provider.py
prd/: TAPD-001234.md
profiles/: demo.yaml  headless-smoke.yaml  minimal.yaml  strict.yaml  swebench.yaml
prompts/: design.md  finalize.md  implement.md  knowledge-bootstrap.md  review.md  test.md
scripts/: constraint.py  debt.py  generate_playbooks.py  pin-to-taskbar.ps1  qa-coverage.sh  recommend.py  retrospect.py  toolopt.py  workload.py  wsl-setup.sh
tests/: conftest.py  test_adapters.py  test_agent_api.py  test_api_context.py  test_api_integration.py  test_calendar_cli.py  test_cli_commands.py  test_context_pack.py  test_context_providers.py  test_context_write.py  test_demo.py  test_e2e.py  test_entry_decisions.py  test_evaluator_loop.py  test_execution_mode.py  test_github_cli.py  test_intake_boundary.py  test_knowledge.py  test_llm_tool_calling.py  test_observability.py  test_p0_fixes.py  test_prd_generator.py  test_project_profile.py  test_project_registry.py  test_pty_kill.py  test_quality_flywheel.py  test_review_feedback.py  test_review_gate.py  test_run_epoch.py  test_semantic.py  test_service.py  test_setup_doctor.py  test_smart_orchestrator.py  test_smoke.py  test_source_integration.py  test_story_context_provider.py  test_story_list_cli.py  test_stuck_reasons.py  test_sub_story.py  test_swebench.py  (+3 more)
(+279 files in other folders)
