[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-flywheel"
version = "0.1.0"
description = "Monorepo workspace for story-lifecycle + story-miner unified knowledge flywheel"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zhaozihao"},
]
keywords = ["ai", "agent", "workflow", "knowledge", "devtools"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = [
    "packages/story-lifecycle/tests",
    "packages/story-miner/tests",
    "packages/knowledge/tests",
    "tests/contracts",
    "tests/integration",
    "tests/e2e",
]
pythonpath = [
    "packages/story-miner",
    "packages/knowledge/src",
    "packages/story-lifecycle/src",
    "packages/testing/src",
]
markers = [
    "real_e2e: real-AI end-to-end (slow/costly; skipped by default, run with `pytest -m real_e2e`)",
]
