[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-flywheel"
version = "0.1.0"
description = "Monorepo workspace for story-lifecycle + story-miner unified knowledge flywheel"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zhaozihao"},
]
keywords = ["ai", "agent", "workflow", "knowledge", "devtools"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
# Intentionally empty: root is a workspace container (pytest config + dev deps),
# NOT a buildable package — no wheel is produced. `pip install -e ".[dev]"` fails
# on hatchling's file-selection heuristic, so CI installs dev deps directly
# (see .github/workflows/ci.yml). Package installs use packages/<pkg>/pyproject.toml.
packages = []

[tool.pytest.ini_options]
testpaths = [
    "packages/story-lifecycle/tests",
    "packages/story-miner/tests",
    "packages/knowledge/tests",
    "tests/contracts",
    "tests/integration",
    "tests/e2e",
]
pythonpath = [
    "packages/story-miner",
    "packages/knowledge/src",
    "packages/story-lifecycle/src",
    "packages/testing/src",
]
markers = [
    "real_e2e: real-AI end-to-end over the in-process harness (slow/costly; skipped by default, run with `pytest -m real_e2e`)",
    "real_web_e2e: real-AI end-to-end over the real HTTP/WebSocket/SSE surface + browser via WebBridge (slow/costly; needs WebBridge daemon + browser extension; run with `pytest -m real_web_e2e`)",
]

[tool.coverage.run]
source = ["packages/story-lifecycle/src/story_lifecycle"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
precision = 1
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = ".story-runs/coverage-html"

[tool.coverage.xml]
output = ".story-runs/coverage.xml"
